# Piksela

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  compile_shaders.bat
Assets/Shaders/: StandardFrag.spv  StandardShader.frag  StandardShader.vert  StandardVert.spv
Core/: Application.cpp  Application.hpp  Assert.hpp  Core.hpp  Time.cpp  Time.hpp
Core/Debug/: DebugLayer.cpp  DebugLayer.hpp  ImGUIDebugger.hpp
Core/IO/: FileReader.cpp  FileReader.hpp  Log.cpp  Log.hpp
Core/Input/: Input.cpp  Input.hpp  InputEvent.hpp  KeyCode.hpp
Engines/Rendering/: Buffer.cpp  Camera.cpp  Camera.hpp  Context.cpp  Context.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
Main/: Main.cpp
Platform/: Window.cpp  Window.hpp
Platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.hpp  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.hpp
Platform/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanShader.cpp  VulkanShader.hpp
Platform/Win32/: Win32Input.cpp  Win32Input.hpp  Win32Window.cpp  Win32Window.hpp
Scene/: CameraController.cpp  CameraController.hpp  Scene.cpp  Scene.hpp
