load("@rules_cc//cc:defs.bzl", "cc_binary")

config_setting(
    name = "debug_build",
    values = {
        "compilation_mode": "dbg",
    },
)

config_setting(
    name = "release_build",
    values = {
        "compilation_mode": "opt",
    },
)

config_setting(
    name = "OpenGL_build",
    define_values = {
        "api": "opengl",
    },
)

config_setting(
    name = "Vulkan_build",
    define_values = {
        "api": "vulkan",
    },
)

# === opengl ===

OPENGL_SRCS = glob([
    "Platform/OpenGL/**/*.cpp",
    "Platform/OpenGL/**/*.hpp",
])

OPENGL_DEFINES = ["PK_OPENGL"]

OPENGL_DEPS = [
    "//ThirdParty/glad",
]

# === win32 ===

WIN32_SRCS = glob([
    "Platform/Win32/**/*.cpp",
    "Platform/Win32/**/*.hpp",
])

WIN32_DEFINES = [
    "PK_WIN32",
    "PK_GLFW",
]

WIN32_DEPS = [
    "//ThirdParty/glfw",
]

# === linux ===

LINUX_DEFINES = [
    "PK_LINUX",
    "PK_GLFW",
]

LINUX_DEPS = [
    "//ThirdParty/glfw",
]

# === darwin ===

DARWIN_DEFINES = [
    "PK_DARWIN",
    "PK_GLFW",
]

DARWIN_DEPS = [
    "//ThirdParty/glfw",
]

# === editor ===

EDITOR_DEFINES = [
    "PK_EDITOR",
]

# === runtime ===

RUNTIME_DEFINES = [
    "PK_RUNTIME",
]

# === common ===

COMMON_SRCS = glob([
    "Core/**/*.cpp",
    "Core/**/*.hpp",
    "Engines/**/*.cpp",
    "Engines/**/*.hpp",
    "Main/**/*.cpp",
    "Main/**/*.hpp",
    "Platform/*.cpp",
    "Platform/*.hpp",
    "Scene/**/*.cpp",
    "Scene/**/*.hpp",
])

COMMON_DEFINES = select({
    ":debug_build": ["PK_DEBUG"],
    ":release_build": ["PK_RELEASE"],
})

COMMON_DEPS = [
    "//ThirdParty/glm",
    "//ThirdParty/spdlog",
    "//ThirdParty/imgui",
    "//ThirdParty/stb",
    "//ThirdParty/tinygltf",
]

cc_binary(
    name = "PikselaEditor",
    srcs = COMMON_SRCS + select({
        "@bazel_tools//src/conditions:windows": WIN32_SRCS,
        "@bazel_tools//src/conditions:linux_x86_64": ["."],
        "@bazel_tools//src/conditions:darwin": ["."],
    }) + select({
        "//:OpenGL_build": OPENGL_SRCS,
        #"//:Vulkan_build": VULKAN_SRCS,
    }),
    defines = COMMON_DEFINES + EDITOR_DEFINES + select({
        "@bazel_tools//src/conditions:windows": WIN32_DEFINES,
        "@bazel_tools//src/conditions:linux_x86_64": LINUX_DEFINES,
        "@bazel_tools//src/conditions:darwin": DARWIN_DEFINES,
    }) + select({
        "//:OpenGL_build": OPENGL_DEFINES,
        #"//:Vulkan_build": VULKAN_DEFINES,
    }),
    deps = COMMON_DEPS + select({
        "@bazel_tools//src/conditions:windows": WIN32_DEPS,
        "@bazel_tools//src/conditions:linux_x86_64": LINUX_DEPS,
        "@bazel_tools//src/conditions:darwin": DARWIN_DEPS,
    }) + select({
        "//:OpenGL_build": OPENGL_DEPS,
        #"//:Vulkan_build": VULKAN_DEPS,
    }),
)

cc_binary(
    name = "PikselaRuntime",
    srcs = COMMON_SRCS + select({
        "@bazel_tools//src/conditions:windows": WIN32_SRCS,
        "@bazel_tools//src/conditions:linux_x86_64": ["."],
        "@bazel_tools//src/conditions:darwin": ["."],
    }),
    defines = COMMON_DEFINES + RUNTIME_DEFINES + select({
        "@bazel_tools//src/conditions:windows": WIN32_DEFINES,
        "@bazel_tools//src/conditions:linux_x86_64": LINUX_DEFINES,
        "@bazel_tools//src/conditions:darwin": DARWIN_DEFINES,
    }),
    deps = COMMON_DEPS + select({
        "@bazel_tools//src/conditions:windows": WIN32_DEPS,
        "@bazel_tools//src/conditions:linux_x86_64": LINUX_DEPS,
        "@bazel_tools//src/conditions:darwin": DARWIN_DEPS,
    }),
)
